--- a/style/paginas/login.css
+++ b/style/paginas/login.css
@@ -54,36 +54,53 @@ body {
     background: #F2ABBC;
   }
 
-  .aside{
-    background-image: url(rosespar1.png);
-    background-position: right;
+  .main-um {
+    background-image: url(part2roses.png);
+    background-position: left;
     grid-column: 1/2;
     grid-row: 2/4;
   }
 
-  .sub {
+  .main{
+    background-image: url(rosespar1.png);
+    background-position: right;
+    grid-column: 2/-1;
+    grid-row: 2/4;
+  }
+
+
+  .footer {
+    /* está ocupando o mesmo espaço do aside, sobrepondo*/
+    grid-column: 1/-1;
+    grid-row: 4/-1;
+    background: #F2ABBC;
+  }
+
+  /* MAIN UM - CADASTRO */
+
+  .main-um .sub {
     font-size: 30px;
     width: 216px;
   }
 
-  .sub ul {
+  .main-um .sub ul {
     margin-left: -50px;
   }
 
-  .sub-ul a {
+  .main-um .sub-ul a {
     color: #fff;
   }
 
-  .sub a {
+  .main-um .sub a {
     font-size: 28px;
   }
 
-  .sub p {
+  .main-um .sub p {
     color: #ffff;
     padding: 50px 5px 0 30px;
   }
 
-  .btn-sub, .btn-entrar {
+  .main-um .sub .btn-sub, .btn-entrar {
     color: #ffff;
     margin-left: 80px;
     background-color: transparent;
@@ -93,13 +110,7 @@ body {
     text-transform: uppercase;
   }
 
-  main {
-    background-image: url(part2roses.png);
-    background-position: left;
-    grid-column: 2/-1;
-    grid-row: 2/4;
-  }
-
+  /* MAIN - LOGIN */
   .login, .main-login input{
     margin: 0 auto;
   }
@@ -153,11 +164,4 @@ body {
   .main-login .btn-entrar:hover, .btn-sub:hover{
     cursor: pointer;
     border: 2px solid white;
-  }
-
-  .footer {
-    /* está ocupando o mesmo espaço do aside, sobrepondo*/
-    grid-column: 1/-1;
-    grid-row: 4/-1;
-    background: #F2ABBC;
   }
