--- a/style/paginas/decorações-e-eventos/decoracoes-e-eventos.css
+++ b/style/paginas/decorações-e-eventos/decoracoes-e-eventos.css
@@ -2,6 +2,7 @@
 @import url(../../estilos-comuns/style.css);
 @import url(../../estilos-comuns/imagens-portifolio/imagens-portifolio.css);
 @import url(../../estilos-comuns/mais-vendidos/mais-vendidos.css);
+@import url(../../estilos-comuns/aniversarios-casamentos/aniversarios-casamentos.css);
 @import url(../../estilos-comuns/footer/footer.css);
 @import url(../../estilos-comuns/menunav/menunav.css);
 
