--- a/style/estilos-comuns/mais-vendidos/mais-vendidos.css
+++ b/style/estilos-comuns/mais-vendidos/mais-vendidos.css
@@ -30,6 +30,8 @@
     justify-items: center; /* Centraliza os cards horizontalmente */
     align-items: center; /* Centraliza os cards verticalmente */
     padding-top: 94.57px;
+    padding-bottom: 94px;
+    gap: 40px;
   }
   
   .card {
