--- a/style/paginas/home/home.css
+++ b/style/paginas/home/home.css
@@ -3,4 +3,6 @@
 @import url(../../estilos-comuns/mais-vendidos/mais-vendidos.css);
 @import url(../../estilos-comuns/inicial-imagens__flores/inicial-imagens__flores.css);
 @import url(../../estilos-comuns/inicial-chamada__portifolio/inicial-chamada__portifolio.css);
+@import url(../../estilos-comuns/inicial-avaliacao__clientes/inicial-avaliacao__clientes.css);
+@import url(../../estilos-comuns/section-portifolio/section-portifolio.css);
 @import url(../../estilos-comuns/section-inicial/section-inicial.css);
