--- a/style/estilos-comuns/footer/footer.css
+++ b/style/estilos-comuns/footer/footer.css
@@ -23,7 +23,7 @@
   }
 
   .gridItem a {
-    color: #2d3a1d;
+    color: white;
     text-transform: uppercase;
     font-size: 16px;
     text-decoration: none;
@@ -37,6 +37,6 @@
     /* está ocupando o mesmo espaço do aside, sobrepondo*/
     grid-column: 1/-1;
     grid-row: 4/-1;
-    background: #F2ABBC;
-    margin-top: 105px;
+    background: #2E8B57;
+    color: white;
   }
