--- a/style/estilos-comuns/inicial-chamada__portifolio/inicial-chamada__portifolio.css
+++ b/style/estilos-comuns/inicial-chamada__portifolio/inicial-chamada__portifolio.css
@@ -11,7 +11,7 @@
     font-size: 45px;
     width: 538px;
     height: 102px;
-    color: #F2ABBC;
+    color: #2E8B57;
     font-family: 'Merriweather';
     font-style: normal;
     font-weight: 400;
@@ -19,7 +19,7 @@
 
 .chamada__portifolio-subtitle {
     padding-bottom: 42px;
-    color: #F2ABBC;
+    color: #2E8B57;
     font-family: 'Merriweather';
     font-style: normal;
     font-weight: 700;
