--- a/style/estilos-comuns/footer/footer.css
+++ b/style/estilos-comuns/footer/footer.css
@@ -1,12 +1,19 @@
-.gridContainer {
-    width: 100%;
-    background: #d7d7d7;
-  }
 
-  .gridItem {
+body {
+  min-height: 100vh;
+}
+
+.gridContainer {
+  width: 100%;
+  background: #d7d7d7;
+  grid-template-rows: auto 1fr auto; /* Adicionei uma linha extra para o footer */
+  grid-gap: 10px;
+}
+
+.gridItem {
     padding: 15px;
   }
-
+  
   .gridItem ul {
     font-size: 24px;
     display: flex;
@@ -17,24 +24,25 @@
     padding: 0;
     list-style: none;
   }
-
+  
   .gridItem li {
     padding: 0 13px;
   }
-
+  
   .gridItem a {
     color: white;
     text-transform: uppercase;
     font-size: 16px;
     text-decoration: none;
   }
-
+  
   .gridItem a:hover {
     text-decoration: underline;
   }
   
   .footer {
     /* está ocupando o mesmo espaço do aside, sobrepondo*/
+    grid-row: 3; /* Posicione o footer na terceira linha do grid */
     grid-column: 1/-1;
     grid-row: 4/-1;
     background: #2E8B57;
