--- a/style/estilos-comuns/section-portifolio/section-portifolio.css
+++ b/style/estilos-comuns/section-portifolio/section-portifolio.css
@@ -3,8 +3,7 @@
     grid-template-columns: repeat(3, 1fr);
     justify-items: center; /* Centraliza os cards horizontalmente */
     align-items: center; /* Centraliza os cards verticalmente */
-    padding-top: 94.57px;
-    padding-bottom: 94px;
+    padding-top: 94.57px ;
   }
 
   .portifolio-title {
@@ -46,7 +45,10 @@
     padding-top: 13px;
     text-align: center;
   }
-
+  
+  .portifolio {
+    margin-bottom: 0;
+  }
   @media (min-width: 1440px) and (max-width: 1920px) {
 
     .portifolio-container {
