se não for agora, tento mais tarde

--- a/style/estilos-comuns/footer/footer.css
+++ b/style/estilos-comuns/footer/footer.css
@@ -47,4 +47,7 @@ body {
     grid-row: 4/-1;
     background: #2E8B57;
     color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
   }
