--- a/style/estilos-comuns/footer/footer.css
+++ b/style/estilos-comuns/footer/footer.css
@@ -1,13 +1,13 @@
 
 body {
-  min-height: 100vh;
+  width: 100%;
 }
 
 .gridContainer {
   width: 100%;
   background: #d7d7d7;
   grid-template-rows: auto 1fr auto; /* Adicionei uma linha extra para o footer */
-  grid-gap: 10px;
+  height: 100%;
 }
 
 .gridItem {
@@ -40,14 +40,13 @@ body {
     text-decoration: underline;
   }
   
-  .footer {
+  .footer{
     /* está ocupando o mesmo espaço do aside, sobrepondo*/
     grid-row: 3; /* Posicione o footer na terceira linha do grid */
     grid-column: 1/-1;
     grid-row: 4/-1;
     background: #2E8B57;
     color: white;
-    position: fixed;
     bottom: 0;
-    width: 100%;
+    clear: both;
   }
