--- a/style/paginas/login.css
+++ b/style/paginas/login.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     font-family: sans-serif;
     margin: 0;
   }
@@ -42,6 +42,7 @@ body {
   }
 
   /*GRID*/
+  /*
   .gridContainer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -70,14 +71,14 @@ body {
 
 
   .footer {
-    /* está ocupando o mesmo espaço do aside, sobrepondo*/
+    /* está ocupando o mesmo espaço do aside, sobrepondo
     grid-column: 1/-1;
     grid-row: 4/-1;
     background: #F2ABBC;
   }
 
   /* MAIN UM - CADASTRO */
-
+/*
   .main-um .sub {
     font-size: 30px;
     width: 216px;
@@ -111,6 +112,7 @@ body {
   }
 
   /* MAIN - LOGIN */
+  /*
   .login, .main-login input{
     margin: 0 auto;
   }
