--- a/style/estilos-comuns/mais-vendidos/mais-vendidos.css
+++ b/style/estilos-comuns/mais-vendidos/mais-vendidos.css
@@ -38,7 +38,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
+    padding-bottom: 20px;
     background-color: #2E8B57;
     color: white;
     height: 240px;
@@ -47,6 +48,7 @@
   
   .card img {
     width: 100%;
+    height: 100%;
     max-height: 200px; /* ou a altura desejada para a imagem */
     object-fit: cover;
   }
