--- a/style/estilos-comuns/menunav/menunav.css
+++ b/style/estilos-comuns/menunav/menunav.css
@@ -1,10 +1,30 @@
 .nav {
-    margin-top: -8px;
-    grid-column: 1/-1;
-    background: #2E8B57;
-    color: white;
-  }
-  
-  ul .nav-home {
-    color: white;
-  }
+  margin-top: -8px;
+  grid-column: 1/-1;
+  background: #2E8B57;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-right: 20px;
+}
+
+.nav-home__login {
+  margin-left: auto;
+}
+
+ul .nav-home {
+  color: white;
+}
