alterando alguns botões para tags a, adaptando o CSS

--- a/style/estilos-comuns/section-portifolio/section-portifolio.css
+++ b/style/estilos-comuns/section-portifolio/section-portifolio.css
@@ -47,7 +47,7 @@
   }
   
   .portifolio {
-    margin-bottom: 0;
+    margin-bottom: 250px;
   }
   @media (min-width: 1440px) and (max-width: 1920px) {
 
