--- a/style/estilos-comuns/menunav/menunav.css
+++ b/style/estilos-comuns/menunav/menunav.css
@@ -7,16 +7,20 @@
   justify-content: center;
   align-items: center;
 }
-.btn {
-  height: 40px;
-  width: 150px;
-  border-radius: 30%;
-  border: none;
-  color: var(--btnFontColor);
-  background-color: var(--btnBg);
+
+.menu-toggle {
+  display: none;
 }
 
-ul {
+.menu-toggle span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  margin-bottom: 5px;
+}
+
+.menu {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +29,7 @@ ul {
   padding: 0;
 }
 
-li {
+.menu li {
   margin-right: 20px;
 }
 
@@ -35,4 +39,36 @@ li {
 
 ul .nav-home {
   color: white;
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+    cursor: pointer;
+  }
+
+  .menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #2E8B57;
+    padding: 20px;
+  }
+
+  .menu li {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .menu a {
+    color: white;
+  }
+
+  .menu-toggle:checked + .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
